--- a/DiscreteMathProject.vcxproj
+++ b/DiscreteMathProject.vcxproj
@@ -139,16 +139,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="dijkstra.cpp">
+    <ClCompile Include="ArrGraph.cpp" />
+    <ClCompile Include="ArrGraph2.cpp" />
+    <ClCompile Include="Graph.cpp" />
+    <ClCompile Include="main.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="성원님코드.c">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-    </ClCompile>
+    <ClCompile Include="Node.cpp" />
+    <ClCompile Include="Queue.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt" />
     <Text Include="input2.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ArrGraph.h" />
+    <ClInclude Include="ArrGraph2.h" />
+    <ClInclude Include="Graph.h" />
+    <ClInclude Include="Node.h" />
+    <ClInclude Include="Queue.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
